# chess-engine

./: CMakeLists.txt
include/: engine.h
include/ai/: emulator.h
include/conditions/: calculated_condition.h  calculated_condition_data.h  condition.h
include/io/: file.h
include/pieces/: bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
include/pieces/base/: movable_piece.h  piece.h
include/pieces/types/: chessman.h  piece_color.h  piece_id.h  status.h
include/resource_management/: image_loader.h
include/utility_components/: concurrent_queued_map.h  coords.h  half_turn.h  settings.h
src/: CMakeLists.txt
src/io/: file.cpp
src/pieces/: bishop.cpp
src/pieces/base/: movable_piece.cpp  piece.cpp
src/pieces/types/: chessman.cpp  piece_color.cpp  piece_id.cpp  status.cpp
src/utility_components/: coords.cpp  half_turn.cpp  settings.cpp
